# pcbb_designer

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pcb.cmd  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: .gitignore  app.py
docs/: CLI.md  FRONTEND.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/dashboard/: PipelineProgress.jsx  QuickActions.jsx  StatusCard.jsx
frontend/src/components/generator/: BOMTable.jsx  GenerateForm.jsx  RequirementsSummary.jsx  SchematicPreview.jsx
frontend/src/components/layout/: Footer.jsx  Header.jsx  Layout.jsx  PageIntro.jsx  Sidebar.jsx
frontend/src/components/shared/: FileDownload.jsx  LoadingSpinner.jsx  StatusBadge.jsx
frontend/src/components/terminal/: TerminalOutput.jsx
frontend/src/components/validator/: DFMCheckItem.jsx  DFMReport.jsx
frontend/src/components/verification/: ConfidenceScore.jsx  VerificationPanel.jsx
frontend/src/hooks/: useConfig.js  useDFM.js  usePipeline.js  useVerification.js
frontend/src/pages/: Dashboard.jsx  Export.jsx  Generate.jsx  Settings.jsx  Validate.jsx
scripts/: setup-kicad-cli.ps1
src/pcbai/: .gitignore  models.py
src/pcbai/api/: main.py
src/pcbai/core/: config.py  logger.py
src/pcbai/llm/: provider.py  verifier.py
src/pcbai/llm/providers/: gemini_provider.py  groq_provider.py  ollama_provider.py
src/pcbai/pipeline/: cli.py
src/pcbai/steps/: bom_generator.py  datasheet_fetcher.py  datasheet_package_extractor.py  dfm_validator.py  footprint_generator.py  footprint_qfn_qfp.py  gerber_exporter.py  pcb_router.py  requirements_parser.py  schematic_synthesizer.py  skidl_schematic.py
tests/: test_footprint_generator.py  test_qfn_qfp.py
